fix layout issues

--- a/index.css
+++ b/index.css
@@ -27,6 +27,8 @@ header small {
 }
 section {
     padding: 8px;
+    padding-left: 24px;
+    padding-right: 24px;
     margin: 0;
 }
 section h2 {
